--- a/_posts/2016-04-10-Proxy.md
+++ b/_posts/2016-04-10-Proxy.md
@@ -11,7 +11,7 @@ summary: Proxy Settings
 ---
 
 During software development, we come across so many tools and frameworks which have their own way to configure HTTP/HTTPS Proxy
-especially when using it from your work environment. Many times, these settings will not work while at home.
+especially when using it from your Work environment. Many times, these settings will not work while at home since the proxy is not available.
 This blog is aimed to capture the settings for most tools for Linux/OSX in one single place from my cheat sheets.
 
 ### Linux/OSX
@@ -28,17 +28,17 @@ Then depending on which network I am connected too, I simply run `proxy` or `nop
 
 - Enable proxy
 
-       git config --global http.proxy http://www.example.com:80
-       git config --global https.proxy http://www.example.com:80
+      git config --global http.proxy http://www.example.com:80
+      git config --global https.proxy http://www.example.com:80
 
 - Disable proxy
 
-       git config --global --unset http.proxy
-       git config --global --unset https.proxy
+      git config --global --unset http.proxy
+      git config --global --unset https.proxy
 
 - Verify your current settings
 
-       git config --global --list
+      git config --global --list
 
 ### NPM
 
@@ -58,21 +58,11 @@ Then depending on which network I am connected too, I simply run `proxy` or `nop
       npm config list
 
 
-### Docker
-
-- Enable proxy.
-
-  Edit `/etc/default/docker`, add two lines
-
-      export http_proxy="http://server:port"
-      export https_proxy="http://server:port"
-
-
 ### Maven
 
 - Enable Proxy
-To figure out which maven settings file is being used, run `mvn -X` in your project and look at the first few lines.
-Configure the settings.xml file as follows:
+
+  To figure out which maven settings file is being used, run `mvn -X` in your project and look at the first few lines. Configure the settings.xml file as follows:
 
       <proxies>
         <proxy>
@@ -109,27 +99,37 @@ If you want to choose proxy at runtime, set `active` to false. Then while runnin
 
   Remove the above settings or comment them.
 
+
+### Docker
+
+- Enable proxy.
+
+  Edit `/etc/default/docker`, add two lines:
+
+      export http_proxy="http://server:port"
+      export https_proxy="http://server:port"
+
+
 ### SVN
 
-Enable proxy. Add the following to `~/.subversion/servers`.
+- Enable proxy. Add the following to `~/.subversion/servers`.
 
-    [global]
-    http-proxy-host = www.example.com
-    http-proxy-port = 80
-
+      [global]
+      http-proxy-host = www.example.com
+      http-proxy-port = 80
 
 
 ### APT-GET
 - Enable proxy. Edit `/etc/apt/apt.conf`. Add
 
-    Acquire::http::proxy "http://www.example.com:80";
-    Acquire::https::proxy "http://www.example.com:80";
+      Acquire::http::proxy "http://www.example.com:80";
+      Acquire::https::proxy "http://www.example.com:80";
 
 
 ### wget
 
-wget will pick up the environment variables http_proxy and https_proxy. However if these environment variables are set, the proxy
-will always be used. To use wget without proxy:
+wget will pick up the environment variables `http_proxy` and `https_proxy`. However if these environment variables are set, the proxy
+will always be used. To use wget without proxy, use:
 
     wget --no-proxy http://...
 
