Reformatted old post. Added proxy for editors

--- a/_posts/2016-04-10-Proxy.md
+++ b/_posts/2016-04-10-Proxy.md
@@ -10,7 +10,7 @@ published: true
 summary: Proxy Settings
 ---
 
-During software development, we come across so many tools and frameworks which have their own way to configure HTTP/HTTPS Proxy
+During software development, we come across so many tools, editors and frameworks which have their own way to configure HTTP/HTTPS Proxy
 especially when using it from your Work environment. Many times, these settings will not work while at home since the proxy is not available.
 This blog is aimed to capture the settings for most tools for Linux/OSX in one single place from my cheat sheets.
 
@@ -132,6 +132,13 @@ wget will pick up the environment variables `http_proxy` and `https_proxy`. Howe
 will always be used. To use wget without proxy, use:
 
     wget --no-proxy http://...
+
+### Brackets
+
+- Open Preferences, add the following to `brackets.json`
+
+      "proxy": "http://www.example.com:80"
+
 
 
 Till then... :metal:
