updated for yum and rpm

--- a/_posts/2016-04-10-Proxy.md
+++ b/_posts/2016-04-10-Proxy.md
@@ -139,6 +139,15 @@ will always be used. To use wget without proxy, use:
 
       "proxy": "http://www.example.com:80"
 
+### yum
 
+- Open /etc/yum.conf ( sudo vi /etc/yum.conf)
+
+  Add line:
+  proxy=http://www.example.com:80
+
+### rpm
+
+$ sudo rpm -ivh --httpproxy my.proxy.com --httpport 8000 http://pkgs.repoforge.org
 
 Till then... :metal:
